Fix last Rust nightly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,6 @@
 name = "SmallVCM-rs"
 version = "0.0.1"
 authors = ["Yuri Kunde Schlesner <yuriks@yuriks.net>"]
+
+[dependencies.time]
+git = "http://github.com/rust-lang/time"
